<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formDrinks">

  <TextView
      android:id="@+id/nutricional_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:text="@string/drink"
      android:textColor="@color/title_color"
      android:textSize="32sp"
      app:layout_constraintBottom_toTopOf="@+id/scrollView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/nutricional_label"
      app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

      <TextView
          android:id="@+id/textViewName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@string/drink_description"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textSize="24dp" />

      <EditText
          android:id="@+id/editTextName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:ems="10"
          android:hint="@string/insert_drink_description"
          android:inputType="textPersonName"
          android:background="@drawable/edittext_background"
          android:padding="12dp" />

      <TextView
          android:id="@+id/categoryLabel"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@string/category"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textSize="24dp" />

      <Spinner
          android:id="@+id/categorySpinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:entries="@array/categories_array"
          android:prompt="@string/select_category"
          android:background="@drawable/edittext_background"
          android:layout_marginBottom="8dp"
          android:padding="12dp" />

    </LinearLayout>

  </ScrollView>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/buttonContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/scrollView">

    <Button
        android:id="@+id/addDrinkFormButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/add_drink_info"
        android:textColor="@color/yellow"
        app:icon="@drawable/ic_fluent_save_24_regular"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/removeDrinkFormButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeDrinkFormButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/remove_drink"
        android:textColor="@color/yellow"
        app:icon="@drawable/ic_fluent_delete_24_regular"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addDrinkFormButton" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
