<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".formDailyDrinks">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchDrinkEditText"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/listDrinksView"
            app:layout_constraintEnd_toStartOf="@+id/searchDrinkButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/searchDrinkButton"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/yellow"
            app:icon="@drawable/ic_fluent_search_24_filled"
            app:iconSize="32dp"
            app:iconTint="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/listDrinksView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchDrinkEditText"
            app:layout_constraintTop_toTopOf="@id/searchDrinkEditText"
            app:layout_constraintVertical_bias="0.0" />

        <ListView
            android:id="@+id/listDrinksView"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:divider="@drawable/list_divider"
            app:layout_constraintBottom_toTopOf="@id/nameDrinkScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchDrinkEditText" />

        <HorizontalScrollView
            android:id="@+id/nameDrinkScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listDrinksView">

            <TextView
                android:id="@+id/nameDrinkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_drink"
                android:textSize="32dp" />
        </HorizontalScrollView>


        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:inputType="date"
            android:text="00/00/0000"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameDrinkScrollView" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate">


            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Qnt:"
                android:textAlignment="center"
                android:textSize="32dp" />

            <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:text="1" />

            <Button
                android:id="@+id/addDrinkButton"
                android:layout_width="80dp"
                android:layout_height="46dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/button_color"
                android:enabled="false"
                android:textColor="@color/yellow"
                app:icon="@drawable/ic_fluent_save_24_regular"
                app:iconGravity="textStart"
                app:iconSize="32dp"
                app:iconTint="@color/yellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/removeDailyDrinksButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/seeDrinksButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_color"
                android:enabled="false"
                android:text="@string/ver"
                android:textColor="@color/yellow"
                app:icon="@drawable/ic_fluent_eye_show_24_filled"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:iconTint="@color/yellow" />
        </LinearLayout>

        <Button
            android:id="@+id/removeDailyDrinksButton"
            :src="@drawable/ic_fluent_delete_24_regular"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/delete"
            android:textColor="@color/yellow"
            app:icon="@drawable/ic_fluent_delete_24_regular"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:iconTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
